--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p>ICT Technical Support Specialist and Frontend Developer, dedicated to delivering reliable IT solutions and building responsive, user-friendly web applications.</p>
                     <div class="social-links">
                         <a href="https://github.com/khiddGG" class="social-link"><i class="fab fa-github"></i></a>
-                        <a href="https://www.facebook.com/Kh1ddTV/" class="social-link"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php/" class="social-link"><i class="fab fa-facebook"></i></a>
                         <a href="https://www.instagram.com/hello.samael_/" class="social-link"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
