--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <p class="description">Provides technical assistance, troubleshooting, and maintenance of computer systems, networks, and software to ensure smooth IT operations.</p>
                     </div>
                     <div class="experience-item">
-                        <h3>System Programmerr</h3>
+                        <h3>System Programmer</h3>
                         <p class="company">Freelance</p>
                         <p class="period">2020 - 2025</p>
                         <p class="description">Develops and implements computer-based systems for academic and organizational use, focusing on design, coding, testing, and deployment to meet specific requirements such as record management, automation, and data processing.</p>
