--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="apple-touch-icon" href="images/profile.jpg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <meta name="description" content="Samael is an ICT Technical Support Specialist and Frontend Developer offering reliable technical solutions, custom system development, and modern web design. Explore projects, skills, experience, and contact information in an interactive portfolio.">
+
 </head>
 
 <body>
@@ -230,4 +232,5 @@
   
 </body>
 </html>
+
 
